[project]
name = "dnd-sheet"
version = "0.1.0"
description = "A comprehensive API for managing D&D character sheets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.1",
    "pyjwt>=2.12.1",
    "uvicorn>=0.44.0",
]
